Fix orders page layout issue

--- a/assets/scss/custom/_pages.scss
+++ b/assets/scss/custom/_pages.scss
@@ -2,9 +2,6 @@
   &.loaded {
     .card {
       .card-body {
-        width: 100%;
-        overflow-x: scroll;
-
         table {
           width: 2200px;
 
